[package]
name = "freqache"
version = "0.3.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
license = "Apache-2.0"
description = "A weighted, thread-safe, futures-aware LFU cache which supports a custom eviction policy"
repository = "https://github.com/haydnv/freqache"
readme = "README.md"

categories = ["asynchronous", "caching", "concurrency", "data-structures"]
keywords = ["lfu", "cache", "custom", "eviction"]

[dependencies]
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.11", features = ["macros"] }
tokio-test = "0.4"
