[package]
name = "freqache"
version = "0.4.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
license = "Apache-2.0"
description = "A thread-safe LFU cache with iterator"
repository = "https://github.com/haydnv/freqache"
readme = "README.md"

categories = ["caching", "data-structures"]
keywords = ["lfu", "cache", "custom", "eviction"]

[dev-dependencies]
rand = "0.8"
